
Note: over its 35+ year history, cdecl has never had good version numbering.
For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 11.11

** More K&R C types
The types `caaddr_t` and `daddr_t` were added; `jmp_buf` was moved from C89.


* Changes in Cdecl 11.10

** Pre-C99 implicit `int`
Added more support for pre-C99 implicit `int`:

    explain *p                          // pointer to int
    explain *p, i                       // pointer to int, int
    explain *a[4]                       // array 4 of pointer to int
    explain *f()                        // function returning pointer to int
    explain (*p)                        // pointer to int -- unnecessary ()

** `const void` function parameters
`const` (and `volatile`) qualifiers for `void` as a function "parameter" (even
via a `typedef`) are now correctly flagged as an error:

    void f1(void);                      // OK
    void f2(const void);                // error

    typedef void Void;
    void f3(Void);                      // OK

    typedef const void CVoid;
    void f4(CVoid);                     // error

** Redefinition check in C++
C++ doesn't support tentative definitions, so:

    int i, i;                           // OK in C; error in C++

is always an error in C++ even if the types match.

** Restricted pointer to non-object
A restricted pointer to a non-object, e.g., function, is now correctly flagged
as an error:

    int (*restrict pf)();               // error


* Changes in Cdecl 11.9

** Fixed reading from stdin
Fixed reading from stdin when it's not a TTY.

** Redefinition check
Names being redefined with a different type in the same declaration are now
correctly forbidden:
