@@ -1,3 +1,3 @@
 cast x into typedef int
             ^
-13: syntax error: "typedef": "as", "into", or "to" expected ("typedef" is a keyword)
+13: error: can not cast into type
