@@ -1,3 +1,3 @@
 define SI as auto int
-                  ^
-19: error: "type automatic int" is illegal for built-in type
+             ^
+14: error: "type automatic int" is illegal for built-in type
