@@ -1,3 +1,3 @@
 define SI as extern int
-                    ^
-21: error: "type external int" is illegal for built-in type
+             ^
+14: error: "type external int" is illegal for built-in type
