@@ -1,3 +1,3 @@
 define SI as static int
-                    ^
-21: error: "type static int" is illegal for built-in type
+             ^
+14: error: "type static int" is illegal for built-in type
