@@ -1,0 +1,1 @@
+declare Int as maybe unused type int
