@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain using Int [[maybe_unused]] = int @ 0
